2009-02-26  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * Makefile.am:
   Fix 'make distcheck' by uninstalling documentation files.


2009-02-17  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Use the "editor-notify" signal to catch text modifications for
   checking while typing. Also remove the timeout which never worked
   as intended.
   Don't add suggestions to the messages window when checking while
   typing.
   These changes should increase the usability and accuracy of the
   'check while typing' feature while not being much slower (if ever).
 * src/gui.c, src/scplugin.c, src/scplugin.h:
   Display accelerator on the 'Default' menu item.
 * src/gui.c, src/gui.h, src/scplugin.c, src/scplugin.h, src/speller.c,
   src/speller.h:
   Prefix all non-static functions which sc_ to avoid symbol clashes.
 * src/speller.c:
   Synchronise lexer checks with Geany's new filetypes.


2009-02-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/sc_plugin.c:
   Use Geany's main_locale_init() to init the localisation system.


2009-02-14  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/speller.c:
   Display a pulsing progressbar while checking large documents.


2009-02-08  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Remove unnecessary gpointer casts.
   If the toolbar item is disabled, just hide it instead of destroying
   it.


2009-02-02  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * configure.in, Makefile.am:
   Install documentation files into the geany-plugins doc dir.
 * src/Makefile.am, src/scplugin.c:
   Implement plugin_help() to open the Readme file in Geany.


2009-01-21  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/gui.c:
   Don't enable mnemonics for "Add ... to Dictionary" and "Ignore All"
   menu items to prevent wrongly displayed labels.

