@@ -35,6 +35,7 @@ typedef struct
 	gboolean use_msgwin;
 	gboolean check_while_typing;
 	gboolean show_toolbar_item;
+	gulong signal_id;
 	GPtrArray *dicts;
 	GtkWidget *menu_item;
 	GtkWidget *submenu_item_default;
